# AccraIQ

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  install_dependencies.sh  pyproject.toml
app/: main.py
docs/: AccraIQ_Technical_Documentation.md  SOLUTION.md
notebooks/: transit_optimization.ipynb
