[project]
name = "ghana-ai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dtw-python>=1.5.3",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "h3>=4.3.0",
    "hdbscan>=0.8.40",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pulp>=3.2.1",
    "pyproj>=3.7.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "streamlit>=1.46.1",
    "streamlit-folium>=0.25.0",
    "weasyprint>=59.0",
    "jinja2>=3.1.0",
    "selenium>=4.0.0",
    "Pillow>=9.0.0",
    "kaleido>=1.0.0",
    "webdriver-manager>=4.0.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "ruff>=0.12.3",
    "seaborn>=0.13.2",
]
